--- a/_data/sidebars/templates_sidebar.yml
+++ b/_data/sidebars/templates_sidebar.yml
@@ -44,7 +44,7 @@ entries:
     output: web
     folderitems:
     
-    - title: Documentation &amp; Templates
+    - title: Getting Started
       url: /index.html
       output: web
     - title: API key request
