--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -9,7 +9,7 @@ entries:
   - title: Resources
     output: web
     folderitems:
-    - title: Documentation &amp; Templates
+    - title: Getting Started
       url: /index.html
       output: web
     - title: API key request
