--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ github_editme_path:
 disqus_shortname: 
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
+google_analytics: UA-1591771-5
+
 host: 127.0.0.1
 # the preview server used. Leave as is.
 
