--- a/xbrlapi.yaml
+++ b/xbrlapi.yaml
@@ -1,5 +1,5 @@
 openapi: 3.0.0
-# XBRL US API
+# XBRL API
 servers:
   - description: Running this application XBRL US server
     url: 'https://api.xbrl.us/'
@@ -7,17 +7,15 @@ servers:
 #     url: 'https://testapi.xbrl.us/'
 info:
   version: "V1"
-  title: XBRL US API
+  title: XBRL API
   description: |
-    This API defines the XBRL US API. 
+    This page is an interactive file (xbrlapi.yaml) that defines the free XBRL API and can be used to build and test queries to retrieve data from the [XBRL US Database of Public filings](https://xbrl.us/filings-database). The XBRL API can work with any database that conforms to the [XBRL 2.1 Specification](https://specifications.xbrl.org/work-product-index-group-base-spec-base-spec.html) 
+
+    You'll need to request provisioning for your XBRL US Web account to get started - [visit the XBRL Data Community page for details](https://xbrl.us/home/use/xbrl-api-community/#provisioning).  There's also a Google Sheet add-on and templates to retrieve data (that don't require provisioning) posted on the XBRL Data Community page.
 
     ## Authorization Flow
 
-    We use [OAuth2 JWT](https://jwt.io/) flows to secure interactions.
-
-    ## Example Interactions
-
-    In this section, we will provide __CURL__ examples for typical __XBRL US API__ flows. Because XBRL US API is sessionless, each "session" will always begin with the [OAuth2 JWT Access Token Flow](https://jwt.io/introduction).
+    We use [OAuth2 JWT](https://jwt.io/) flows to secure interactions. Below are **CURL** examples for typical **XBRL API** flows to request, return and use a token, which is required to process queries. Because the XBRL API is sessionless, each "session" will always begin with the [OAuth2 JWT Access Token Flow](https://jwt.io/introduction).
 
     ### Access Token Flow
 
@@ -60,37 +58,35 @@ info:
       Content-Type: application/json; charset=utf-8 
       Body: <...>
       ```
-
-    Once an `access_token` has been acquired, use it until it returns a `401`. If this occurs, simply request a new token using the credentials from before. 
-
-    To get access to the XBRL US Implementation of the API you will need a client id and secret, to use with your XBRL or Google username and password. You can request a client id and passcode from the XBRL US website in the [provisioning section](https://xbrl.us/home/use/xbrl-api-community/#provisioning).
-
+      
+    **Once an access_token has been acquired, it can be used on all queries with your account until it returns a 401.** If this occurs, simply request a new token using the credentials from before.
+    
   contact:
     name: xbrl.us
-    email: support@xbrl.us
+    email: support@xbrl.us?subject=XBRL API question (Github)
 tags:
   - name: oauth2
-    description: Operations to request authorization, receive tokens, and check tokens
+    description: - request authorization, receive tokens, and check tokens
   - name: Facts
-    description: Used to request XBRL Facts
+    description: - return XBRL facts and metadata contained in a report
   - name: Reports
-    description: Used to get information on XBRL reports
+    description: - get details about XBRL reports
   - name: Entity
-    description:  Used to get information about entities making XBRL filings
+    description: - get details about entities making XBRL filings
   - name: Assertions
-    description: Used to get information on errors in XBRL reports
-  - name: DTS
-    description: Used to get information about taxonomies.
+    description: - return error information about XBRL facts and reports in filings
+  - name: DTS (discoverable taxonomy set)
+    description: - get details information about taxonomies.
   - name: Concepts
-    description: Used to information about XBRL concepts in a taxonomy
+    description: - get information about XBRL concepts in a taxonomy
   - name: Labels
-    description: Used to request label information associated with a concept and a dts identifier.
+    description: - return metadata associated with a concept and a dts identifier.
   - name: Networks
-    description: Used to request label information associated with a concept and a dts identifier.
+    description: - return network information about concepts and/or relationships in a dts.
   - name: Relationships
-    description: Used to request relationship information associated with a network and/or dts identifier.
+    description: - get relationship information associated with a network and/or dts identifier.
   - name: Documents
-    description: Used to request document information associated with a DTS or report.
+    description: - request document information associated with a dts or report.
     
 security:
   - oauth2: [ROLE_CLIENT, ROLE_USER]
@@ -102,11 +98,11 @@ paths:
       tags: [oauth2]
       security: []
       description: >
-        Assuming a valid login exists, this route allows a trusted client to aquire an access token for itself, or to request an access token for a specific user. You may send both `client_credentials` grants and `password` grants via the following: 
-         * __application/x-www-form-urlencoded__
+        Assuming a valid login exists, this route allows a trusted client to aquire an access token for itself, or to request an access token for a specific user. **You may send both `client_credentials` grants and `password` grants via the following**: 
+         * **application/x-www-form-urlencoded**
 
 
-        __[Read more](https://oauth.net/2/grant-types/)__
+        **[Read more](https://oauth.net/2/grant-types/)**
       requestBody:
         content:
           # application/json:
@@ -127,7 +123,7 @@ paths:
       responses:
         '200':
           description: > 
-            The authorization grant has been validated, and an access token is granted. __[Read more](https://jwt.io/introduction/)__
+            The authorization grant has been validated, and an access token is granted. **[Read more](https://jwt.io/introduction/)**
           content:
             application/json:
               schema:
@@ -140,12 +136,12 @@ paths:
                     type: string
                     format: byte
                     example: eyJ...124nOvc
-                    description: A JWT access token. __[Read more](https://jwt.io/)__
+                    description: A JWT access token. **[Read more](https://jwt.io/)**
                   refresh_token:
                     type: string
                     format: byte
                     example: eyJ...124nOvc
-                    description: A JWT access token. __[Read more](https://jwt.io/)__
+                    description: A JWT access token. **[Read more](https://jwt.io/)**
                   expires_in:
                     type: integer
                     example: 3600
@@ -292,7 +288,7 @@ paths:
           
       responses:
         '200':
-          description: __fact details__ successfully accepted
+          description: **fact details** successfully accepted
           content:
             application/json:
               schema:
@@ -352,7 +348,7 @@ paths:
           description: List of fact components that can be searched on.  
       responses:
         '200':
-          description: __fact details__ successfully accepted
+          description: **fact details** successfully accepted
           content:
             application/json:
               schema:
@@ -427,7 +423,7 @@ paths:
         
       responses:
         '200':
-          description: __fact details__ successfully accepted
+          description: **fact details** successfully accepted
           content:
             application/json:
               schema:
@@ -488,7 +484,7 @@ paths:
           
         responses:
           '200':
-            description: __report details__ successfully accepted
+            description: **report details** successfully accepted
             content:
               application/json:
                 schema:
@@ -536,7 +532,7 @@ paths:
             description: List of concepts to return.
         responses:
           '200':
-            description: __report details__ successfully accepted
+            description: **report details** successfully accepted
             content:
               application/json:
                 schema:
@@ -627,7 +623,7 @@ paths:
           description: List of concepts to return.
       responses:
         '200':
-          description: __report details__ successfully accepted
+          description: **report details** successfully accepted
           content:
             application/json:
               schema:
@@ -718,7 +714,7 @@ paths:
           description: List of concepts to return.
       responses:
         '200':
-          description: __report details__ successfully accepted
+          description: **report details** successfully accepted
           content:
             application/json:
               schema:
@@ -757,7 +753,7 @@ paths:
 
         responses:
           '200':
-            description: __report details__ successfully deleted
+            description: **report details** successfully deleted
             content:
               application/json:
                 schema:
@@ -822,7 +818,7 @@ paths:
           
         responses:
           '200':
-            description: __entity report details__ successfully accepted
+            description: **entity report details** successfully accepted
             content:
               application/json:
                 schema:
@@ -887,7 +883,7 @@ paths:
           
         responses:
           '200':
-            description: __entity report details__ successfully accepted
+            description: **entity report details** successfully accepted
             content:
               application/json:
                 schema:
@@ -939,7 +935,7 @@ paths:
           
         responses:
           '200':
-            description: __entity report details__ successfully accepted
+            description: **entity report details** successfully accepted
             content:
               application/json:
                 schema:
@@ -997,7 +993,7 @@ paths:
           
         responses:
           '200':
-            description: __report details__ successfully accepted
+            description: **report details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1067,7 +1063,7 @@ paths:
           
         responses:
           '200':
-            description: __validation details__ successfully processed
+            description: **validation details** successfully processed
             content:
               application/xml:
                 schema:
@@ -1115,7 +1111,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1172,7 +1168,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1230,7 +1226,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1288,7 +1284,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1346,7 +1342,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1398,7 +1394,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1465,7 +1461,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1516,7 +1512,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1575,7 +1571,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1634,7 +1630,7 @@ paths:
           
         responses:
           '200':
-            description: __concept details__ successfully accepted
+            description: **concept details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1696,7 +1692,7 @@ paths:
           
         responses:
           '200':
-            description: __label details__ successfully accepted
+            description: **label details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1768,7 +1764,7 @@ paths:
           
         responses:
           '200':
-            description: __network details__ successfully accepted
+            description: **network details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1833,7 +1829,7 @@ paths:
           
         responses:
           '200':
-            description: __network details__ successfully accepted
+            description: **network details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1888,7 +1884,7 @@ paths:
           
         responses:
           '200':
-            description: __network details__ successfully accepted
+            description: **network details** successfully accepted
             content:
               application/json:
                 schema:
@@ -1953,7 +1949,7 @@ paths:
           
         responses:
           '200':
-            description: __network details__ successfully accepted
+            description: **network details** successfully accepted
             content:
               application/json:
                 schema:
@@ -2028,7 +2024,7 @@ paths:
           
         responses:
           '200':
-            description: __network details__ successfully accepted
+            description: **network details** successfully accepted
             content:
               application/json:
                 schema:
@@ -2091,7 +2087,7 @@ paths:
           
         responses:
           '200':
-            description: __network details__ successfully accepted
+            description: **network details** successfully accepted
             content:
               application/json:
                 schema:
@@ -2135,8 +2131,8 @@ components:
           example: password
           description: >
             Used to identify which credentials the authorization server needs to check
-              * `client_credentials` - Requires a client_id and client_secret only
-              * `password` - Requires a username and password as well as client_id and client_secret
+              * **client_credentials** - Requires a client_id and client_secret only
+              * **password** - Requires a username and password as well as client_id and client_secret
         client_id:
           type: string
           example: XBRL US
