--- a/xbrlapi.yaml
+++ b/xbrlapi.yaml
@@ -11,7 +11,7 @@ info:
   description: |
     The xbrlapi.yaml file above defines the free XBRL API and can be [used to build and test queries below on this web page](https://xbrlus.github.io/xbrl-api/#/oauth2) to retrieve data from the [XBRL US Database of Public filings](https://xbrl.us/filings-database). The XBRL API can work with any database that conforms to the [XBRL 2.1 Specification](https://specifications.xbrl.org/work-product-index-group-base-spec-base-spec.html) 
 
-    You'll need to request provisioning for your XBRL US Web account to get started - [visit the XBRL Data Community page for details](https://xbrl.us/home/use/xbrl-api-community/#provisioning).  There's also a free Google Sheet add-on and several templates posted on the XBRL Data Community page that can be used to retrieve data with the XBRL API which _don't require Client ID and Secret provisioning_.
+    XBRL US Members can login and use this page to generate client ID and secret pairs necessary to generate access and refresh tokens. Non-members should [email info@xbrl.us](mailto:info@xbrl.us?subject=Request to use OAuth2) to have your XBRL US Web account provisioned for OAuth2, necessary to [generate access tokens](https://xbrl.us/access-token).  There's also a free Google Sheet add-on and several templates posted on the XBRL Data Community page that can be used to retrieve data with the XBRL API which _don't require Client ID and Secret provisioning_.
 
     ## Authorization Flow
 
@@ -241,6 +241,7 @@ paths:
         - $ref: '#/components/parameters/fact.hash_Param'
         - $ref: '#/components/parameters/fact.id_Param'
         - $ref: '#/components/parameters/fact.is-extended_Param'
+        - $ref: '#/components/parameters/fact.text-search_Param'
         - $ref: '#/components/parameters/fact.ultimus_Param'
         - $ref: '#/components/parameters/fact.ultimus-index_Param'
         - $ref: '#/components/parameters/fact.value_Param'
@@ -335,6 +336,7 @@ paths:
       description: >
        Search for _XBRL facts_ based on the fact.id attribute of the fact.
       parameters:
+        - $ref: '#/components/parameters/fact.text-search_Param'
         - name: fact.id
           in: path
           description: ID of the fact defined by the API.
@@ -593,6 +595,7 @@ paths:
         - $ref: '#/components/parameters/fact.hash_Param'
         - $ref: '#/components/parameters/fact.id_Param'
         - $ref: '#/components/parameters/fact.is-extended_Param'
+        - $ref: '#/components/parameters/fact.text-search_Param'
         - $ref: '#/components/parameters/fact.ultimus_Param'
         - $ref: '#/components/parameters/fact.ultimus-index_Param'
         - $ref: '#/components/parameters/fact.value_Param'
@@ -680,6 +683,7 @@ paths:
         - $ref: '#/components/parameters/fact.hash_Param'
         - $ref: '#/components/parameters/fact.id_Param'
         - $ref: '#/components/parameters/fact.is-extended_Param'
+        - $ref: '#/components/parameters/fact.text-search_Param'
         - $ref: '#/components/parameters/fact.ultimus-index_Param'
         - $ref: '#/components/parameters/fact.ultimus_Param'
         - $ref: '#/components/parameters/fact.value_Param'
@@ -1944,6 +1948,7 @@ paths:
           - $ref: '#/components/parameters/relationship.target-namespace_Param'
           - $ref: '#/components/parameters/relationship.tree-depth_Param'
           - $ref: '#/components/parameters/relationship.tree-sequence_Param'
+          - $ref: '#/components/parameters/stringmatch_Param'
           
           - in: query
             name: fields
@@ -2066,6 +2071,7 @@ paths:
         description: >
           Search _XBRL documents_ and their content.
         parameters:
+          - $ref: '#/components/parameters/document.text-search_Param'
           - $ref: '#/components/parameters/document.top-level_Param'
           - $ref: '#/components/parameters/document.uri_Param'
           - $ref: '#/components/parameters/dts.id_Param'
@@ -2081,7 +2087,9 @@ paths:
                 
             description: |
                 List of fields to return. 
-                Available fields are as follows: 
+                Available fields are as follows:  
+                  * document.example 
+                  * document.highlighted-vaule
                   * document.top-level
                   * document.tree-level
                   * document.tree-order
@@ -2092,7 +2100,7 @@ paths:
                 
                 To limit the values returned use document._limit(n)_
                 
-                To sort on a field use the field folled by .sort. For example to sort in ascending order for document.uri then enter document.uri._sort(ASC)_ as a return field.
+                To sort on a field use the field followed by .sort. For example to sort in ascending order for document.uri then enter document.uri._sort(ASC)_ as a return field.
           
         responses:
           '200':
@@ -2318,14 +2326,16 @@ components:
       items:
         type: string
         enum: [
-                document.top-level
-                ,document.tree-level
-                ,document.tree-order
-                ,document.type
-                ,document.uri
-                ,dts.id
-                ,document.*
-                ]     
+              document.example
+              ,document.highlighted-value
+              ,document.top-level
+              ,document.tree-level
+              ,document.tree-order
+              ,document.type
+              ,document.uri
+              ,dts.id
+              ,document.*
+               ]     
               
     dts_fields:
       type: array
@@ -2420,8 +2430,10 @@ components:
               ,entity.name
               ,entity.scheme
               ,fact.decimals
+              ,fact.example
               ,fact.has-dimensions
               ,fact.hash
+              ,fact.highlighted-value
               ,fact.id
               ,fact.inline-display-value
               ,fact.inline-is-hidden
@@ -2645,8 +2657,10 @@ components:
               ,entity.name
               ,entity.scheme
               ,fact.decimals
+              ,fact.example
               ,fact.has-dimensions
               ,fact.hash
+              ,fact.highlighted-value
               ,fact.id
               ,fact.inline-display-value
               ,fact.inline-is-hidden
@@ -2748,6 +2762,10 @@ components:
     document_details: 
       type: object
       properties:
+        document.example:
+          $ref: '#/components/schemas/document_example'
+        document.highlighted-value:
+          $ref: '#/components/schemas/document_highlighted-value'
         document.top-level:
           $ref: '#/components/schemas/document_top-level'
         document.tree-level:
@@ -2827,10 +2845,14 @@ components:
           $ref: '#/components/schemas/entity_scheme'
         fact.decimals:
           $ref: '#/components/schemas/fact_decimals'
+        fact.example:
+          $ref: '#/components/schemas/fact_example'
         fact.has-dimensions:
           $ref: '#/components/schemas/fact_has-dimensions'
         fact.hash:
           $ref: '#/components/schemas/fact_hash'
+        fact.highlighted-value:
+          $ref: '#/components/schemas/fact_highlighted-value'
         fact.id:
           $ref: '#/components/schemas/fact_id'
         fact.inline-display-value:
@@ -3270,10 +3292,14 @@ components:
           $ref: '#/components/schemas/entity_scheme'
         fact.decimals:
           $ref: '#/components/schemas/fact_decimals'
+        fact.example:
+          $ref: '#/components/schemas/fact_example'
         fact.has-dimensions:
           $ref: '#/components/schemas/fact_has-dimensions'
         fact.hash:
           $ref: '#/components/schemas/fact_hash'
+        fact.highlighted-value:
+          $ref: '#/components/schemas/fact_highlighted-value'
         fact.id:
           $ref: '#/components/schemas/fact_id'
         fact.inline-display-value:
@@ -3552,6 +3578,12 @@ components:
       type: string
       description: ID of the dimension.
     
+    document_example:
+      type: string
+      description: Excerpt of the document where text string search using document.text-search matched the request.
+    document_highlighted-value:
+      type: string
+      description: Complete document containing highlighted indication of document.text-search result (search result appears in bold blue font).
     document_top-level:
       type: boolean
       description: Boolean that indicates if the file in a DTS is the entry point.
@@ -3632,12 +3664,18 @@ components:
     fact_decimals:
       type: string
       description: The decimal value associated with a fact. This can be either a number representing decimal places or be infinite. There are two values returned for this field the first is a decimal and the second is a boolean. The first indicates the decimal places if applicable and the second identifies if the value is infinite(T) or not (F).
+    fact_example:
+      type: string
+      description: Excerpt of the fact value where text string search using fact.text-search matched the request.
     fact_has-dimensions:
       type: boolean
       description: This boolean field indicates if the fact has any dimensions associated with it.
     fact_hash:
       type: string
       description: The fact hash is derived from the aspect properties of the fact. Each fact will have a different hash in a given report. Over time however, different facts may have the same hash if they are identical. The hash does not take into account the value reported for the fact. The fact hash is used to determine the ultimus index. By searching on the hash you can identify all identical facts that were reported.
+    fact_highlighted-value:
+      type: string
+      description: Full fact value containing highlighted indication of fact.text-search result (search result appears in bold blue font).
     fact_id:
       type: integer
       description: The internal identifier used to identify a fact.
@@ -4172,6 +4210,33 @@ components:
           type: string
        description: ID of the dimension.
 
+    document.text-search_Param:
+       in: query
+       name: document.text-search
+       schema:
+          type: string
+       description: | 
+              Search for strings within document object (ie. to locate a specific name, topic or reference within an entire document). Fields returned include document.example and document.highlighted-vaule 
+              
+              The XBRL API uses the Sphinx search engine to identify text. This powerful search engine quickly identifies a given text string. Sphinx is enabled to support stemming, which means it will also return plurals of a noun i.e. ipad will also return ipads. It will also return the present, future and past form of a verb for example the word kill will also return killed and killing. To match the word exactly the character "=" can be placed in front of the word i.e. = ipad will return the occurrence of the word ipad only.
+              
+              The Sphinx search characters that can be used are summarized in the table below:
+
+              | Operator Name | Symbol | Example |
+              | ------- | ------- | ------- | 
+              | OR operator  | &#124; | Tsunami &#124; Earthquake will return text that contain either Earthquake or Tsunami. |
+              | AND Operator	| & |	Tsunami & Earthquake will return text that contains both Tsunami and Earthquake. If you leave a space between 2 words it is assumed to represent an &. i.e. Tsunami Japan |
+              | NOT Operator	| ! | To exclude words from a text search use the operator !. For example Tsunami & Japan &! Earthquake will return strings that contain Tsunami and Japan but not earthquake. |
+              | Exact Match Operator | "text here" | Use quotes to match an exact sentence for example "the ultimate effect that the Tsunami" will return the exact sentence match. |
+              | Parenthesis	| () |	Use Parenthesis to group search logic. (Assets & Liabilities) &! retirement will return text that contain both Assets and Liabilities but excluding retirement. |
+              | Equal (no stemming)	| = |	Use = in front of a word to stop stemming. i.e. kill will return kill, killed, kills and killing. =kill will return kill. |
+              | Word Proximity	| NEAR/n |	Use the key word NEAR with an integer to identify closeness of words. i.e. Tsunami NEAR/3 Japan will return those occurrences where Tsunami and Japan are within three words of each other. i.e. "Tsunami in Japan", "Japan earthquake and tsunami" but not "Japan earthquake and large tsunami" |
+              | Sentence Restriction	| SENTENCE	| Use the key word SENTENCE to identify where words are in the same sentence. i.e. Japan SENTENCE tsunami to return where these 2 words are in the same sentence. |
+              | Paragraph Restriction	| PARAGRAPH	| Use the key word PARAGRAPH to identify where words are in the same paragraph. i.e. Japan PARAGRAPH tsunami to return where these 2 words are in the same paragraph. |         
+              | Quorum matching	| "text here"/n	| Use an integer after a text string to match the number of words defined after the forward slash. i.e. "Japan earthquake tsunami"/2 will return those strings where any 2 of the 3 words listed occurr i.e. Japan and Earthquake, Japan and Tsunami, earthquake and Tsunami. |             
+              | Order	| << |	To return those strings only where words appear in a certain 2 less than signs are used. For example Japan << earthquake << tsunami will return a string where all three words appear in this order. such as "occurred in Japan. The earthquake was followed by a tsunami which" |             
+              | Proximity Search	| "text here"~n	| Use ~n after a text string to identify where the search words all appear in a sequence of n words. For example "Japan earthquake tsunami"~10 will return those strings where the 3 words appear within a sequence of 10 words i.e. Japan Tsunami and Earthquake, Japan's earthquake shook the town and was destroyed by Tsunami, would both be returned as all 3 words appear in a sequence of less than 10 words. |
+
     document.top-level_Param:
       in: query
       name: document.top-level
@@ -4300,6 +4365,33 @@ components:
        schema:
           type: boolean
        description: This indicates if the fact is comprised of either an extension concept, extension axis or extension member.
+    fact.text-search_Param:
+       in: query
+       name: fact.text-search
+       schema:
+          type: string
+       description: | 
+              Search for strings within fact.value data (ie. to locate a specific name, topic or reference within a text block). Fields returned include fact.example and fact.highlighted-value
+              
+              The XBRL API uses the Sphinx search engine to identify text. This powerful search engine quickly identifies a given text string. Sphinx is enabled to support stemming, which means it will also return plurals of a noun i.e. ipad will also return ipads. It will also return the present, future and past form of a verb for example the word kill will also return killed and killing. To match the word exactly the character "=" can be placed in front of the word i.e. = ipad will return the occurrence of the word ipad only.
+              
+              The Sphinx search characters that can be used are summarized in the table below:
+
+              | Operator Name | Symbol | Example |
+              | ------- | ------- | ------- | 
+              | OR operator  | &#124; | Tsunami &#124; Earthquake will return text that contain either Earthquake or Tsunami. |
+              | AND Operator	| & |	Tsunami & Earthquake will return text that contains both Tsunami and Earthquake. If you leave a space between 2 words it is assumed to represent an &. i.e. Tsunami Japan |
+              | NOT Operator	| ! | To exclude words from a text search use the operator !. For example Tsunami & Japan &! Earthquake will return strings that contain Tsunami and Japan but not earthquake. |
+              | Exact Match Operator | "text here" | Use quotes to match an exact sentence for example "the ultimate effect that the Tsunami" will return the exact sentence match. |
+              | Parenthesis	| () |	Use Parenthesis to group search logic. (Assets & Liabilities) &! retirement will return text that contain both Assets and Liabilities but excluding retirement. |
+              | Equal (no stemming)	| = |	Use = in front of a word to stop stemming. i.e. kill will return kill, killed, kills and killing. =kill will return kill. |
+              | Word Proximity	| NEAR/n |	Use the key word NEAR with an integer to identify closeness of words. i.e. Tsunami NEAR/3 Japan will return those occurrences where Tsunami and Japan are within three words of each other. i.e. "Tsunami in Japan", "Japan earthquake and tsunami" but not "Japan earthquake and large tsunami" |
+              | Sentence Restriction	| SENTENCE	| Use the key word SENTENCE to identify where words are in the same sentence. i.e. Japan SENTENCE tsunami to return where these 2 words are in the same sentence. |
+              | Paragraph Restriction	| PARAGRAPH	| Use the key word PARAGRAPH to identify where words are in the same paragraph. i.e. Japan PARAGRAPH tsunami to return where these 2 words are in the same paragraph. |         
+              | Quorum matching	| "text here"/n	| Use an integer after a text string to match the number of words defined after the forward slash. i.e. "Japan earthquake tsunami"/2 will return those strings where any 2 of the 3 words listed occurr i.e. Japan and Earthquake, Japan and Tsunami, earthquake and Tsunami. |             
+              | Order	| << |	To return those strings only where words appear in a certain 2 less than signs are used. For example Japan << earthquake << tsunami will return a string where all three words appear in this order. such as "occurred in Japan. The earthquake was followed by a tsunami which" |             
+              | Proximity Search	| "text here"~n	| Use ~n after a text string to identify where the search words all appear in a sequence of n words. For example "Japan earthquake tsunami"~10 will return those strings where the 3 words appear within a sequence of 10 words i.e. Japan Tsunami and Earthquake, Japan's earthquake shook the town and was destroyed by Tsunami, would both be returned as all 3 words appear in a sequence of less than 10 words. |
+
     fact.ultimus_Param:
        in: query
        name: fact.ultimus
@@ -4687,6 +4779,25 @@ components:
           type: string
        description: Name of the source of the data such as SEC.
 
+    stringmatch_Param:
+       in: query
+       name: stringmatch
+       schema:
+          type: string
+       description: |
+          Enables simple text search functionality with the network.role-description parameter on the relationship object.
+
+          Use the **like** switch to find a specific text string, for example
+
+          ```stringmatch=network.role-description(like)&network.role-description=statement income&network.link-name=presentationLink```
+
+          to find the exact phrase 'statement income' in the presentation linkbase.
+
+          Use the **ts** switch to find multiple text strings, for example
+
+          ```stringmatch=network.role-description(ts)&network.role-description=statement income&network.link-name=presentationLink``` 
+          
+          to find each word 'statement' and 'income' in the presentation linkbase.
     unit_Param:
        in: query
        name: unit
